optimise log